# pytket-custatevec

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  README.md  environment-test.yml  index.html  mkdocs.yaml  mypy-check  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: build-test  build_and_test.yml  check-examples.yml  lint.yml
api/: index.html
api/shots_backend/: index.html
api/state_backend/: index.html
assets/: benchmark_shots.html  benchmark_sv.html
assets/benchmark_env/: index.html
benchmarks/: benchmark.py  index.html
contributing/: index.html
docs/: api.rst  benchmarks.md  changelog.rst  contributing.md  index.md  index.rst
docs/_templates/autosummary/: class.rst
docs/stylesheets/: extra.css
examples/: index.html
examples/advanced/: index.html
examples/simulation/: index.html
gates/: index.html
installation/: index.html
people/: index.html
pytket/extensions/custatevec/: __init__.py  _metadata.py  apply.py  custatevec.py  dtype.py  gate_classes.py  gate_definitions.py  handle.py  logger.py  statevector.py  utils.py
pytket/extensions/custatevec/backends/: __init__.py  custatevec_backend.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test.ipynb  test_custatevec_backend.py  test_metadata.py  test_utils.py
