[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytket-custatevec"
version = "0.0.1"
description = "Extension for pytket providing access to cuStateVec functionality."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gabriel Matos", email = "gabriel.matos@quantinuum.com" }]

dependencies = ["cupy", "pytket"]

[dependency-groups]
dev = [
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "sphinx==8.1.3",
  "ruff",
  "mypy",
  "pyright"
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytket-custatevec.git"

# See https://microsoft.github.io/pyright/#/getting-started
[tool.pyright]
include = ["pytket/extensions/custatevec", "tests"]
ignore = ["**/*.ipynb"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.refurb]
python_version = "3.10"