[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytket-custatevec"
version = "0.0.1"
description = "Extension for pytket providing access to cuStateVec functionality."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Fabian Finger", email = "fabian.finger@quantinuum.com"},
  { name = "Gabriel Matos", email = "gabriel.matos@quantinuum.com"},
  { name = "Pranav Kalidindi", email = "pranav.kalidindi@quantinuum.com"},
]

dependencies = [
  "pytket", 
  "cupy-cuda12x", 
  "cuquantum-python-cu12>=25.3.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.3.0",
  "pytest==8.4.2",
  "sphinx==8.1.3",
  "ruff==0.14.1",
  "mypy==1.18.2",
]

test = [
  "pytest",
  "pytket-qiskit",
  "pytket-qulacs",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytket-custatevec.git"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.refurb]
python_version = "3.10"
ignore = ["FURB184"]

[tool.typos.default.extend-words]
aer = "aer"
